# specwriter

./: CLAUDE.md  Cargo.toml  GHERKIN_GUIDE.md  Makefile  README.md  flake.nix
.github/workflows/: ci.yml
bdd/: Cargo.toml  mock-claude-fail.sh  mock-claude-nine-questions.sh  mock-claude-no-questions.sh  mock-claude-prioritized.sh  mock-claude-seed-slow.sh  mock-claude-seed.sh  mock-claude-session-expiry.sh  mock-claude-slow.sh  mock-claude.sh
bdd/features/: answer_dialog.feature  error_handling.feature  integration.feature  layout.feature  placeholder.feature  question_cap.feature  question_priority.feature  question_seeding.feature  questions.feature  queue_progress.feature  quit_confirmation.feature  scrolling.feature  session_recovery.feature  specs_dir.feature  (+3 more)
features/: answer_dialog.feature  answer_suppression.feature  error_handling.feature  integration.feature  layout.feature  packaging.feature  placeholder.feature  question_cap.feature  question_priority.feature  question_seeding.feature  questions.feature  queue_progress.feature  quit_confirmation.feature  scrolling.feature  settings.feature  spec_viewer.feature  status_indicator.feature  suggested_solutions.feature  tabs.feature
spec/: README.md
specs/: README.md
specwriter/: Cargo.toml  askama.toml
specwriter/src/: integrator.rs  lib.rs  main.rs  settings.rs  ui.rs
specwriter/templates/: create_spec.md  integrate.md
tui-testdriver/: Cargo.toml  mock-claude-blocking.sh  mock-claude-nine-questions.sh  mock-claude-prioritized.sh  mock-claude-session-expiry.sh  mock-claude-slow.sh  mock-claude.sh
(+2 files in other folders)
